<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_study">

    <!--<fragment
        android:id="@+id/nav_transform"
        android:name="com.example.mesaestudo.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.mesaestudo.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mesaestudo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />-->
    <fragment
        android:id="@+id/nav_result"
        android:name="com.example.mesaestudo.ui.grades.GradesFragment"
        android:label="@string/menu_notas"
        tools:layout="@layout/fragment_grades" />
    <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.mesaestudo.ui.timer.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />
    <fragment
        android:id="@+id/nav_plan"
        android:name="com.example.mesaestudo.ui.plan.PlanFragment"
        android:label="@string/menu_plano"
        tools:layout="@layout/fragment_plan" />
    <fragment
        android:id="@+id/nav_study"
        android:name="com.example.mesaestudo.ui.study.StudyFragment"
        android:label="@string/menu_estudar"
        tools:layout="@layout/fragment_study" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mesaestudo.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>