<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_transform"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_transform" />
        <item
            android:id="@+id/nav_reflow"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_reflow" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/book_ribbon_24dp_1f1f1f_fill0_wght400_grad0_opsz24"
            android:title="@string/menu_estudar" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/calendar_month_24dp_1f1f1f_fill0_wght400_grad0_opsz24"
            android:title="@string/menu_plano" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/license_24dp_1f1f1f_fill0_wght400_grad0_opsz24"
            android:title="@string/menu_notas" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/timer_24dp_1f1f1f_fill0_wght400_grad0_opsz24"
            android:title="@string/menu_timer" />
    </group>
</menu>